# scholar2sql

./: README.md  _config.yml  pyproject.toml
src/scholar2sql/: sql.py
